--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -28,6 +28,7 @@
         }
 
         .tab {
+            outline: none;
             display: inline-flex;
             justify-content: center;
             align-items: center;
@@ -35,7 +36,7 @@
             padding-top: 1.5rem;
             padding-bottom: 1.5rem;
             border-top: 1px solid rgba($grayish-blue, .4);
-            color: $grayish-blue;
+            color: rgba($very-dark-blue, .8);
             cursor: pointer;
             position: relative;
             transition: color .3s;
